--- a/fcm_config/pubspec.yaml
+++ b/fcm_config/pubspec.yaml
@@ -11,10 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.19.1
-  firebase_messaging: ^11.4.4
-  flutter_local_notifications: ^9.6.1
-  http: ^0.13.4
+  firebase_core: ^1.20.0
+  firebase_messaging: ^12.0.1
+  flutter_local_notifications: ^10.0.0-dev.18
+  http: ^0.13.5
   path_provider: ^2.0.11
 
 dev_dependencies:
