--- a/fcm_config/pubspec.yaml
+++ b/fcm_config/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^1.21.0
-  firebase_messaging: ^12.0.3
-  flutter_local_notifications: ^10.0.0-dev.20
+  firebase_messaging: ^13.0.4
+  flutter_local_notifications: ^11.0.1
   http: ^0.13.5
   path_provider: ^2.0.11
 
